  Beyond that, a sql cache template was added, along with a sqlite example.
  flat_list, along with a metadata/cache specific backend, and cache.util.mirror_cache, 
  for metadata transfers.
  Note all existing cache modules/implementations are now invalidated.  Sorry.  Upgrade em.
  Existing cache's on disk are invalidated also, with the exemption of portdir/metadata/cache.

  08 Mar 2005; Marius Mauch <genone@gentoo.org> pym/portage.py, pym/ebuild.py:
  Fixing fetch restriction code. Replace references to PORTAGE_RESTRICT with 
  just RESTRICT and fix broken writemsg() calls.

  08 Mar 2005; Marius Mauch <genone@gentoo.org> pym/portage.py:
  Reverting broken patch for fakedbapi.cp_all(): it returned a nested list 
  instead of a simple list and was weird at best.

  06 Mar 2005; Brian Harring <ferringb@gentoo.org> autogen.sh:
  used for autogenerating auto* crap after a checkout.

  06 Mar 2005; Brian Harring <ferringb@gentoo.org> bin/emerge, pym/portage_dep.py, 
  pym/portage_file.py, pym/portage_util.py, pym/portage.py, pym/config.py, 
  pym/eclass_cache:
  Broke config class out into it's own module.  Minimal hacks, 3 from portage
  imports that can't be gutted till reliance on global db is gone.  Aside 
  from that, shifts of funcs around.
  Also broke eclass_cache out.

  06 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Added a check
  to make sure the file exists before working with it, when called with an
  ebuild path. #84102  Fixed the invalid call to isvalidatom() #84144
  Expanded syslist during the unmerge phase so that all packages listed in
  system are correctly checked and warned against.  #83670

  02 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Fixed a
  var substitution that caused installed virtuals to not be considered.

  02 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/ebuild.py: added a 
  check to force PORTAGE_LOGFILE to have the appropriate owner/perms.
